--- a/sources/zh.jmtt/Cargo.toml
+++ b/sources/zh.jmtt/Cargo.toml
@@ -4,9 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-aidoku = { git = "https://github.com/Aidoku/aidoku-rs.git", features = ["helpers"] }
-base64 = { version = "0.21.1", default-features = false, features = ["alloc"] }
-serde = { version = "1.0.188", default-features = false, features = ["derive", "alloc"] }
+aidoku = { git = "https://github.com/Aidoku/aidoku-rs.git", features = ["helpers", "json"] }
+md5 = "0.7"
 
 [dev-dependencies]
 aidoku = { git = "https://github.com/Aidoku/aidoku-rs.git", features = ["test"] }
