--- a/sources/zh.jmtt/Cargo.toml
+++ b/sources/zh.jmtt/Cargo.toml
@@ -5,7 +5,8 @@ edition = "2024"
 
 [dependencies]
 aidoku = { git = "https://github.com/Aidoku/aidoku-rs.git", features = ["helpers", "json"] }
-md5 = "0.7"
+md5 = { version = "0.7", default-features = false }
+
 
 [dev-dependencies]
 aidoku = { git = "https://github.com/Aidoku/aidoku-rs.git", features = ["test"] }
