--- a/sources/zh.jmtt/Cargo.toml
+++ b/sources/zh.jmtt/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 aidoku = { git = "https://github.com/Aidoku/aidoku-rs.git", features = ["helpers", "json"] }
+base64 = { version = "0.21", default-features = false, features = ["alloc"] }
 md5 = { version = "0.7", default-features = false }
 
 
